links in slider on homepage

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Thinko Digital</span></h2>
           <p class="animate__animated animate__fadeInUp">Providing Digital Services to Shape the Future  .</p>
-          <a href="" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
+          <a href="./services.html" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
       </div>
 
@@ -83,7 +83,7 @@
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Think Digital</h2>
           <p class="animate__animated animate__fadeInUp">Providing Digital Services to Shape the Future.</p>
-          <a href="" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
+          <a href="./services.html" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
       </div>
 
@@ -92,7 +92,7 @@
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Work Digital</h2>
           <p class="animate__animated animate__fadeInUp">Providing Digital Services to Shape the Future.</p>
-          <a href="" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
+          <a href="./services.html" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
       </div>
 
